// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Media Asset Page A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`AMP Media Asset Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Media Asset Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Media Asset Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=69&p=persian.iran.media_asset.23231114.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Acps%3Acurie%3Aasset%3A43667729-4c50-834f-a4b5-c0c95c3cafcf]&x2=[amp]&x3=[news-persian]&x4=[fa]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article-media-asset]&x8=[simorgh]&x9=[Trump%2520long%2520headline%2520-%2520BBC%2520News%2520%D9%81%D8%A7%D8%B1%D8%B3%DB%8C]&x11=[2019-02-15T12%3A47%3A51.000Z]&x12=[2019-02-15T12%3A47%3A51.000Z]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Media Asset Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "article-media-asset",
    "domain": "test.bbc.co.uk",
    "sections": "Persian, Persian - MAP",
    "title": "Trump long headline",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Media Asset Page Analytics comscore 1`] = `
{
  "extraUrlParams": {
    "comscorekw": "amp",
  },
  "vars": {
    "c2": "17986528",
  },
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 2`] = `
{
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 3`] = `
{
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 4`] = `
{
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 5`] = `
{
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 6`] = `
{
  "text": "کوکی ها",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 7`] = `
{
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.co.uk/persian/send/u50853555",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 8`] = `
{
  "text": "اخبار به زبان‌های دیگر",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`AMP Media Asset Page Footer Anchors should match text and url 9`] = `
{
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`AMP Media Asset Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Media Asset Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`AMP Media Asset Page Footer Paragraphs should match text 1`] = `"© 2025 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`AMP Media Asset Page Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 1`] = `
{
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 2`] = `
{
  "text": "بحران خاورمیانه",
  "url": "/persian/topics/cj31ldvmg1et",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 3`] = `
{
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 4`] = `
{
  "text": "ویدیو",
  "url": "/persian/topics/c6z7mnr559gt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 5`] = `
{
  "text": "تلویزیون",
  "url": "/persian/topics/cw9qgeqd1zqt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 6`] = `
{
  "text": "ايران",
  "url": "/persian/topics/ckdxnwvwwjnt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 7`] = `
{
  "text": "افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 8`] = `
{
  "text": "جهان",
  "url": "/persian/topics/c1d8ye58xl8t",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 9`] = `
{
  "text": "هنر",
  "url": "/persian/topics/c9wpm0epm45t",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 10`] = `
{
  "text": "ورزش",
  "url": "/persian/topics/cnq6879k7yjt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 11`] = `
{
  "text": "اقتصاد",
  "url": "/persian/topics/cl8l9mvlllqt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 12`] = `
{
  "text": "دانش",
  "url": "/persian/topics/ckdxnwr4r1yt",
}
`;

exports[`AMP Media Asset Page Header Navigation link should match text and url 13`] = `
{
  "text": "فراتر از خبر",
  "url": "/persian/topics/cxr3ex12k6et",
}
`;

exports[`AMP Media Asset Page Main heading should match text 1`] = `"Trump long headline"`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`AMP Media Asset Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`AMP Media Asset Page SEO Canonical link 1`] = `"http://localhost:7080/persian/iran-23231114"`;

exports[`AMP Media Asset Page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Media Asset Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Media Asset Page SEO Heading level 1 1`] = `"Trump long headline"`;

exports[`AMP Media Asset Page SEO Lang attribute 1`] = `"fa"`;

exports[`AMP Media Asset Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "Article",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "noBylinesPolicy": "https://www.bbc.com/persian/institutional-49283091#authorexpertise",
      },
      "dateModified": "2019-02-15T12:47:51.000Z",
      "datePublished": "2019-02-15T12:47:51.000Z",
      "headline": "Trump long headline",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_persian/14DFC/test/_63700558_p01lmkk5.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "fa",
        "name": "Persian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/persian/iran-23231114",
        "@type": "WebPage",
        "name": "Trump long headline",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_persian/14DFC/test/_63700558_p01lmkk5.jpg",
      "url": "http://localhost:7080/persian/iran-23231114",
    },
  ],
}
`;

exports[`AMP Media Asset Page SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "Trump long headline",
  "duration": "PT26S",
  "embedURL": "https://www.test.bbc.com/persian/av-embeds/iran-23231114/vpid/p01lmkjk",
  "name": "Trump short headline",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01lmkk5.jpg",
  "uploadDate": "2019-02-15T12:37:28.000Z",
}
`;

exports[`AMP Media Asset Page SEO OG description 1`] = `"Trump summary text"`;

exports[`AMP Media Asset Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_persian/14DFC/test/_63700558_p01lmkk5.jpg"`;

exports[`AMP Media Asset Page SEO OG image alt 1`] = `"Trump getting upset"`;

exports[`AMP Media Asset Page SEO OG locale 1`] = `"fa"`;

exports[`AMP Media Asset Page SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`AMP Media Asset Page SEO OG title 1`] = `"Trump long headline - BBC News فارسی"`;

exports[`AMP Media Asset Page SEO OG type 1`] = `"article"`;

exports[`AMP Media Asset Page SEO OG url 1`] = `"http://localhost:7080/persian/iran-23231114"`;

exports[`AMP Media Asset Page SEO Page title 1`] = `"Trump long headline - BBC News فارسی"`;

exports[`AMP Media Asset Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Media Asset Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Media Asset Page SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`AMP Media Asset Page SEO Twitter description 1`] = `"Trump summary text"`;

exports[`AMP Media Asset Page SEO Twitter image alt 1`] = `"Trump getting upset"`;

exports[`AMP Media Asset Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_persian/14DFC/test/_63700558_p01lmkk5.jpg"`;

exports[`AMP Media Asset Page SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`AMP Media Asset Page SEO Twitter title 1`] = `"Trump long headline - BBC News فارسی"`;

exports[`AMP Media Asset Page Timestamp should match text and date 1`] = `
{
  "date": "2019-02-15",
  "text": "۲۶ بهمن ۱۳۹۷ - ۱۵ فوریه ۲۰۱۹",
}
`;
